tests/semantic/valid/expressions/test_type_conversion.src
fn main() -> int {
    int a = 10;
    float b = 3.14;
    float c = a + b;
    int d = a + 5;
    return d;
}