tests/semantic/invalid/declaration_errors/test_duplicate_param.src
fn add(int a, int a) -> int {
    return a + a;
}

fn main() -> int {
    return add(5, 3);
}